# demand-forecasting-tdd

./: README.md  environment.yml  pyproject.toml
.github/worflows/: tests.yml
.github/workflows/: tests.yml
data/: sample_sales.csv
src/data/: dataset.py
src/domain/: product.py
src/features/: build_features.py
src/models/: demand_model.py
src/pipelines/: train.py
tests/: test_build_features.py  test_dataset.py  test_model.py  test_product.py  test_train_pipeline.py
