[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecasting-tdd"
version = "0.1.0"
description = "Minimal demand forecasting pipeline with TDD and clean architecture"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]